[package]
name = "mr3_advanced_viewer"
version = "0.0.5"
authors = ["ofeeg"]
edition = "2021"

[dependencies]
iced = "0.4.2"
libc = "0.2"
sysinfo = "0.24.3"
process-memory = "0.4.0"
deunicode = "1.3.1"
lazy_static = "1.4.0"
process_gaddrs = {path = "process_gaddrs"}
process_gaddrs_derive = {path = "process_gaddrs/process_gaddrs_derive"}
