[package]
name = "mr3-advanced-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4.2"
iced_native = "0.5.1"
iced_futures = "0.4.1"
lazy_static = "1.4.0"
process_gaddrs = {path = "process_gaddrs"}
process_gaddrs_derive = {path = "process_gaddrs/process_gaddrs_derive"}
sysinfo = "0.24.3"
process-memory = "0.4.0"